// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser exponential expressions parses exponential operators 1`] = `
Array [
  Assignment {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "_",
    },
    "value": Binary {
      "left": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 3,
        },
      },
      "token": Object {
        "kind": 6,
        "line": 1,
        "text": "^",
      },
    },
  },
]
`;

exports[`parser exponential expressions parses repeated exponential operators as left-associative 1`] = `
Array [
  Assignment {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "_",
    },
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "value": Int32 {
            "kind": 3,
            "value": 2,
          },
        },
        "right": Literal {
          "value": Int32 {
            "kind": 3,
            "value": 3,
          },
        },
        "token": Object {
          "kind": 6,
          "line": 1,
          "text": "^",
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 4,
        },
      },
      "token": Object {
        "kind": 6,
        "line": 1,
        "text": "^",
      },
    },
  },
]
`;
